Potential fix for overscroll navigation on iOS Chrome.

--- a/css/stroll.css
+++ b/css/stroll.css
@@ -1,6 +1,7 @@
 html, body {
     position: fixed;
     overscroll-behavior: none;
+    overflow: hidden;
 }
 
 #stroll {
